Changed conditions in computer opponent to ensure it does not examine an element out of bounds

--- a/styles/index.css
+++ b/styles/index.css
@@ -87,6 +87,10 @@ td {
 	margin: 0;
 }
 
+#pGrid {
+	margin-bottom: 4vh;
+}
+
 /*******************/
 /*	  Home Page    */
 /*******************/
